// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Form Example 1`] = `
<div style="<removed>">
  <fieldset
    id="<removed>"
    aria-labelledby="<removed>"
  >
    <div style="<removed>">
      <legend
        data-weight="medium"
        id="<removed>"
      >
        <h4>
          Skjema
        </h4>
      </legend>
      <div
        data-color="accent"
        tabindex="-1"
        style="<removed>"
      >
        <span>
          Skjemafremgang
        </span>
        <span>
          Side 1 av 7
        </span>
        <u-progress
          value="1"
          id="<removed>"
          aria-busy="false"
          aria-label="..."
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="14"
          role="progressbar"
          max="7"
          aria-hidden="true"
          style="<removed>"
        >
          <template shadowrootmode="open">
            <slot>
            </slot>
            <style>
              :host(:not([hidden])) { box-sizing: border-box; border: 1px solid; display: inline-block; height: .5em; width: 10em; overflow: hidden }
:host::before { content: ''; display: block; height: 100%; background: currentColor; width: var(--percentage, 0%); transition: width .2s }
:host(:not([value])) { background: linear-gradient(90deg,currentColor 25%, transparent 50%, currentColor 75%) 50%/400% }
@media (prefers-reduced-motion: no-preference) { :host { animation: indeterminate 2s linear infinite }  }
@keyframes indeterminate { from { background-position-x: 100% } to { background-position-x: 0 } }
            </style>
          </template>
        </u-progress>
      </div>
    </div>
    <table data-border="true">
      <thead>
        <tr>
          <th>
            Påstander
          </th>
          <th>
            Uenig
          </th>
          <th>
            Nøytral
          </th>
          <th>
            Enig
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            Første påstand
          </td>
          <td>
            <ds-field data-clickdelegatefor="<removed>">
              <input
                id="<removed>"
                aria-label="Uenig i påstand Første påstand"
                type="radio"
                value="Uenig"
                name="rankings.Første påstand"
              >
            </ds-field>
          </td>
          <td>
            <ds-field data-clickdelegatefor="<removed>">
              <input
                id="<removed>"
                aria-label="Nøytral i påstand Første påstand"
                type="radio"
                value="Nøytral"
                name="rankings.Første påstand"
              >
            </ds-field>
          </td>
          <td>
            <ds-field data-clickdelegatefor="<removed>">
              <input
                id="<removed>"
                aria-label="Enig i påstand Første påstand"
                type="radio"
                value="Enig"
                name="rankings.Første påstand"
              >
            </ds-field>
          </td>
        </tr>
        <tr>
          <td>
            Andre påstand
          </td>
          <td>
            <ds-field data-clickdelegatefor="<removed>">
              <input
                id="<removed>"
                aria-label="Uenig i påstand Andre påstand"
                type="radio"
                value="Uenig"
                name="rankings.Andre påstand"
              >
            </ds-field>
          </td>
          <td>
            <ds-field data-clickdelegatefor="<removed>">
              <input
                id="<removed>"
                aria-label="Nøytral i påstand Andre påstand"
                type="radio"
                value="Nøytral"
                name="rankings.Andre påstand"
              >
            </ds-field>
          </td>
          <td>
            <ds-field data-clickdelegatefor="<removed>">
              <input
                id="<removed>"
                aria-label="Enig i påstand Andre påstand"
                type="radio"
                value="Enig"
                name="rankings.Andre påstand"
              >
            </ds-field>
          </td>
        </tr>
        <tr>
          <td>
            Tredje påstand
          </td>
          <td>
            <ds-field data-clickdelegatefor="<removed>">
              <input
                id="<removed>"
                aria-label="Uenig i påstand Tredje påstand"
                type="radio"
                value="Uenig"
                name="rankings.Tredje påstand"
              >
            </ds-field>
          </td>
          <td>
            <ds-field data-clickdelegatefor="<removed>">
              <input
                id="<removed>"
                aria-label="Nøytral i påstand Tredje påstand"
                type="radio"
                value="Nøytral"
                name="rankings.Tredje påstand"
              >
            </ds-field>
          </td>
          <td>
            <ds-field data-clickdelegatefor="<removed>">
              <input
                id="<removed>"
                aria-label="Enig i påstand Tredje påstand"
                type="radio"
                value="Enig"
                name="rankings.Tredje påstand"
              >
            </ds-field>
          </td>
        </tr>
      </tbody>
    </table>
  </fieldset>
  <div style="<removed>">
    <button
      data-variant="secondary"
      type="button"
    >
      Neste
      <svg
        xmlns="http://www.w3.org/2000/svg"
        width="1em"
        height="1em"
        fill="none"
        viewbox="0 0 24 24"
        focusable="false"
        role="img"
        aria-hidden="true"
      >
        <path
          fill="currentColor"
          d="M14.088 6.873a.75.75 0 0 1 .942.097l4.5 4.5a.75.75 0 0 1 0 1.06l-4.5 4.5a.75.75 0 0 1-1.06-1.06l3.22-3.22H5a.75.75 0 0 1-.75-.74V12a.75.75 0 0 1 .75-.75h12.19l-3.22-3.22a.75.75 0 0 1 .118-1.157"
        >
        </path>
      </svg>
    </button>
  </div>
</div>
`;

exports[`Percentage 1`] = `
<div>
  <span>
    20%
  </span>
  <u-progress
    value="2"
    id="<removed>"
    aria-busy="false"
    aria-label="..."
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="20"
    role="progressbar"
    max="10"
    aria-hidden="true"
    style="<removed>"
  >
    <template shadowrootmode="open">
      <slot>
      </slot>
      <style>
        :host(:not([hidden])) { box-sizing: border-box; border: 1px solid; display: inline-block; height: .5em; width: 10em; overflow: hidden }
:host::before { content: ''; display: block; height: 100%; background: currentColor; width: var(--percentage, 0%); transition: width .2s }
:host(:not([value])) { background: linear-gradient(90deg,currentColor 25%, transparent 50%, currentColor 75%) 50%/400% }
@media (prefers-reduced-motion: no-preference) { :host { animation: indeterminate 2s linear infinite }  }
@keyframes indeterminate { from { background-position-x: 100% } to { background-position-x: 0 } }
      </style>
    </template>
  </u-progress>
</div>
`;

exports[`Preview 1`] = `
<div>
  <span>
    Steg 3 av 10
  </span>
  <u-progress
    value="3"
    id="<removed>"
    aria-busy="false"
    aria-label="..."
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="30"
    role="progressbar"
    max="10"
    aria-hidden="true"
    style="<removed>"
  >
    <template shadowrootmode="open">
      <slot>
      </slot>
      <style>
        :host(:not([hidden])) { box-sizing: border-box; border: 1px solid; display: inline-block; height: .5em; width: 10em; overflow: hidden }
:host::before { content: ''; display: block; height: 100%; background: currentColor; width: var(--percentage, 0%); transition: width .2s }
:host(:not([value])) { background: linear-gradient(90deg,currentColor 25%, transparent 50%, currentColor 75%) 50%/400% }
@media (prefers-reduced-motion: no-preference) { :host { animation: indeterminate 2s linear infinite }  }
@keyframes indeterminate { from { background-position-x: 100% } to { background-position-x: 0 } }
      </style>
    </template>
  </u-progress>
</div>
`;
